--- a/src/Play.Identity.Contracts/Play.Identity.Contracts.csproj
+++ b/src/Play.Identity.Contracts/Play.Identity.Contracts.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <PackageDescription>Common Contracts used by Play Economy services.</PackageDescription>
+    <Authors>Giovanny Hernandez</Authors>
+    <Company>.NET Microservices</Company>
   </PropertyGroup>
 
 </Project>
