--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -80,6 +80,53 @@
           "role"
         ]
       }
+    ],
+    "Clients": [
+      {
+        "ClientId": "frontend",
+        "AllowedGrantTypes": [
+          "authorization_code"
+        ],
+        "RequireClientSecret": false,
+        "RedirectUris": [
+          "http://localhost:3000/authentication/login-callback"
+        ],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "catalog.fullaccess",
+          "inventory.fullaccess",
+          "trading.fullaccess",
+          "IdentityServerApi",
+          "roles"
+        ],
+        "AlwaysIncludeUserClaimsInIdToken": true,
+        "PostLogoutRedirectUris": [
+          "http://localhost:3000/authentication/logout-callback"
+        ]
+      },
+      {
+        "ClientId": "postman",
+        "AllowedGrantTypes": [
+          "authorization_code"
+        ],
+        "RequireClientSecret": false,
+        "RedirectUris": [
+          "https://oauth.pstmn.io/v1/browser-callback"
+        ],
+        "AllowedScopes": [
+          "openid",
+          "profile",
+          "catalog.fullaccess",
+          "catalog.readaccess",
+          "catalog.writeaccess",
+          "inventory.fullaccess",
+          "trading.fullaccess",
+          "IdentityServerApi",
+          "roles"
+        ],
+        "AlwaysIncludeUserClaimsInIdToken": true
+      }
     ]
   },
   "AllowedHosts": "*"
