--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,14 +2,10 @@
     "version": "0.2.0",
     "configurations": [
         {
-            // Use IntelliSense to find out which attributes exist for C# debugging
-            // Use hover for the description of the existing attributes
-            // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/Play.Identity.Service/bin/Debug/net7.0/Play.Identity.Service.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Play.Identity.Service",
@@ -26,6 +22,15 @@
             "type": "coreclr",
             "request": "attach",
             "processId": "${command:pickProcess}"
+        },
+        {
+            "name": "Docker .NET Launch",
+            "type": "docker",
+            "request": "launch",
+            "preLaunchTask": "docker-run: debug",
+            "netCore": {
+                "appProject": "${workspaceFolder}/src/Play.Identity.Contracts/Play.Identity.Contracts.csproj"
+            }
         }
     ]
 }
