Added kubernetess service

--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -1,20 +1,20 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "ServiceSettings":{
+  "ServiceSettings": {
     "ServiceName": "Identity"
   },
-  "MongoDBSettings": {
+  "MongoDbSettings": {
     "Host": "localhost",
     "Port": 27017
   },
-  "RabbitMQSettings": {
-    "Host":  "localhost"
+  "RabbitMQSettings" : {
+    "Host": "localhost"
   },
   "IdentitySettings": {
     "AdminUserEmail": "admin@play.com",
@@ -56,7 +56,7 @@
       {
         "Name": "Inventory",
         "Scopes": [
-          "inventory.fullaccess" 
+          "inventory.fullaccess"
         ],
         "UserClaims": [
           "role"
@@ -64,17 +64,17 @@
       },
       {
         "Name": "Identity",
-        "Scopes": [
-          "IdentityServerApi" 
+        "Scopes" : [
+          "IdentityServerApi"
         ],
-        "UserClaims": [
+        "UserClaims":[
           "role"
         ]
       },
       {
         "Name": "Trading",
         "Scopes": [
-          "trading.fullaccess" 
+          "trading.fullaccess"
         ],
         "UserClaims": [
           "role"
@@ -100,8 +100,8 @@
           "IdentityServerApi",
           "roles"
         ],
-        "AlwaysIncludeUserClaimsInIdToken": true,
-        "PostLogoutRedirectUris": [
+        "AlwaysIncludeUserClaimsInIdToken" : true,
+        "PostLogoutRedirectUris":[
           "http://localhost:3000/authentication/logout-callback"
         ]
       },
@@ -112,7 +112,8 @@
         ],
         "RequireClientSecret": false,
         "RedirectUris": [
-          "https://oauth.pstmn.io/v1/browser-callback"
+          "https://oauth.pstmn.io/v1/browser-callback",
+          "urn:ietf:wg:oauth:2.0:oob"
         ],
         "AllowedScopes": [
           "openid",
@@ -125,7 +126,7 @@
           "IdentityServerApi",
           "roles"
         ],
-        "AlwaysIncludeUserClaimsInIdToken": true
+        "AlwaysIncludeUserClaimsInIdToken" : true
       }
     ]
   },
