--- a/kubernetes/identity.yaml
+++ b/kubernetes/identity.yaml
@@ -14,6 +14,9 @@ spec:
       containers:
         - name: identity
           image: playeconomycontainerregistry.azurecr.io/playy.identity:1.0.3
+          securityContext: 
+            runAsUser: 0
+            privileged: true
           env:
             - name: ASPNETCORE_URLS
               value: "http://+:5002"
@@ -40,3 +43,16 @@ spec:
               cpu: "150m"
           ports:
             - containerPort: 5002
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: identity-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: identity
+  ports:
+    - port: 80
+      targetPort: 5002
