--- a/src/Play.Identity.Service/Play.Identity.Service.csproj
+++ b/src/Play.Identity.Service/Play.Identity.Service.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
      <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
+     <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.3.2" />
+     <PackageReference Include="Azure.Identity" Version="1.12.1" />
     <PackageReference Include="Duende.IdentityServer" Version="6.1.7" />
     <PackageReference Include="Duende.IdentityServer.AspNetIdentity" Version="6.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.0" />
