--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -36,7 +36,7 @@
       },
       {
         "Name": "trading.fullaccess"
-      },
+      },      
       {
         "Name": "IdentityServerApi"
       }
@@ -69,8 +69,8 @@
         ],
         "UserClaims":[
           "role"
-        ]
-      },
+        ]        
+      },          
       {
         "Name": "Trading",
         "Scopes": [
@@ -104,7 +104,7 @@
         "PostLogoutRedirectUris":[
           "http://localhost:3000/authentication/logout-callback"
         ]
-      },
+      },      
       {
         "ClientId": "postman",
         "AllowedGrantTypes": [
@@ -112,7 +112,6 @@
         ],
         "RequireClientSecret": false,
         "RedirectUris": [
-          "https://oauth.pstmn.io/v1/browser-callback",
           "urn:ietf:wg:oauth:2.0:oob"
         ],
         "AllowedScopes": [
@@ -120,7 +119,7 @@
           "profile",
           "catalog.fullaccess",
           "catalog.readaccess",
-          "catalog.writeaccess",
+          "catalog.writeaccess",          
           "inventory.fullaccess",
           "trading.fullaccess",
           "IdentityServerApi",
@@ -128,7 +127,7 @@
         ],
         "AlwaysIncludeUserClaimsInIdToken" : true
       }
-    ]
+    ]    
   },
   "AllowedHosts": "*"
 }
