--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -3,3 +3,42 @@ microserviceName: "identity"
 image:
   repository: playeconomyacr.azurecr.io/play.identity
   tag: 1.0.10
+
+# Dictionary of Enviroment Variables
+envVariables:
+  ASPNETCORE_URLS: "http://+:5002"
+  ServiceSettings__MessageBroker: SERVICEBUS
+  ServiceSettings__KeyVaultName: economykeyvault
+  IdentitySettings__PathBase: /identity/svc
+  IdentitySettings__CertificateCerFilePath: "/certificates/certificate.crt"
+  IdentitySettings__CertificateKeyFilePath: "/certificates/certificate.key"
+  IdentityServerSettings__Clients__0__RedirectUris__0: https://playeconomy-gateway.westus2.cloudapp.azure.com/authentication/login-callback
+  IdentityServerSettings__Clients__0__PostLogoutRedirectUris__0: https://playeconomy-gateway.westus2.cloudapp.azure.com/authentication/logout-callback
+
+resources:
+  limits:
+    memory: "128Mi"
+    cpu: "150m"
+
+# Container specifications
+container:
+  port: 5002
+  liveness:
+    path: /health/live
+    initialDelaySeconds: 10
+  readiness:
+    path: /health/ready
+    initialDelaySeconds: 10
+  volumeMounts:
+    - name: certificate-volume
+      mountPath: /certificates
+
+volumes:
+  - name: certificate-volume
+    secret:
+      secretName: signing-cert
+      items:
+        - key: tls.key
+          path: certificate.key
+        - key: tls.crt
+          path: certificate.crt
