--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: identity-serviceaccount
+  name: "{{.Values.microserviceName}}-serviceaccount"
   annotations:
-    azure.workload.identity/client-id: c1ff5a2f-073b-4c8c-9daf-f9c51de11e8b
+    azure.workload.identity/client-id: {{.Values.identityClientId}}
   labels:
     azure.workload.identity/use: "true"
