--- a/helm/templates/certificate.yaml
+++ b/helm/templates/certificate.yaml
@@ -1,12 +1,14 @@
+{{- if .Values.certificate}} # deploy only if the cert is defined
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: signing-cert
+  name: "{{.Values.microserviceName}}-cert"
 spec:
-  secretName: signing-cert
+  secretName: {{.Values.certificate.secretName}}
   # the issuer remains to provision the new cert
   issuerRef:
     name: letsencrypt-pod # refers to the ClusterIssuer
     kind: ClusterIssuer
   dnsNames:
-    - "playeconomy-gateway.westus2.cloudapp.azure.com"
+    - {{.Values.certificate.hostname}}
+{{- end}}
