--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,9 +8,33 @@ on:
     branches: [ "main" ]
 
 jobs:
+  # this will generate the version that `package-and-publish-contracts` will take as output
+  generate-version:
+    runs-on: ubuntu-latest
+
+    permissions: # to publish the new tag to github
+      contents: write
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Github Tag Bump
+      id: tag_bump
+      # You may pin to the exact commit or the version.
+      # uses: anothrNick/github-tag-action@a2c70ae13a881faf2b4953baaa9e49731997ab36
+      uses: anothrNick/github-tag-action@1.67.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        INITIAL_VERSION: 1.0.2 # this comes from your Contracts pkg
+        DEFAULT_BUMP: patch # 1.0.x
+        
+    outputs:
+      new_version: ${{ steps.tag_bump.outputs.new_tag }} # store the generated tag
+          
+  # This publishes the contracts
   package-and-publish-contracts:
 
     runs-on: ubuntu-latest
+    needs: generate-version # this job requires this to be completed
 
     steps:
     - uses: actions/checkout@v4 # checkout the latest code
@@ -19,4 +43,9 @@ jobs:
       with:
         dotnet-version: 7.0.x
     - name: Pack
-      run: dotnet pack src/Play.Identity.Contracts/ --configuration Release -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity -o packages
+      run: | 
+        dotnet pack src/Play.Identity.Contracts/ \
+        --configuration Release \
+        -p:PackageVersion=${{ needs.generate-version.outputs.new_version }} \
+        -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
+        -o packages
