--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,12 +36,20 @@ jobs:
     runs-on: ubuntu-latest
     needs: generate-version # this job requires this to be completed
 
+    permissions:
+      contents: read
+      packages: write
+
     steps:
     - uses: actions/checkout@v4 # checkout the latest code
     - name: Setup .NET # Setup .NET env
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 7.0.x
+        source-url: https://nuget.pkg.github.com/${{github.repository_owner}}/index.json
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Pack
       run: | 
         dotnet pack src/Play.Identity.Contracts/ \
@@ -49,3 +57,6 @@ jobs:
         -p:PackageVersion=${{ needs.generate-version.outputs.new_version }} \
         -p:RepositoryUrl=https://github.com/${{github.repository_owner}}/play.identity \
         -o packages
+
+    - name: Publish
+      run: dotnet nuget push packages/*.nupkg
