--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -42,7 +42,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4 # checkout the latest code
-    - name: Setup .NET # Setup .NET env
+    
+    - name: Setup .NET 
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 7.0.x
@@ -73,10 +74,18 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write 
   
     steps:
     - uses: actions/checkout@v4 # checkout the latest code
-
+    
+    - name: Azure Login
+      uses: Azure/login@v2.2.0
+      with:
+        client-id: ${{secrets.AZURE_CLIENT_ID}}
+        tenant-id: ${{secrets.AZURE_TENANT_ID}}
+        subscription-id: ${{secrets.GH_PAT}}
+          
     - name: Build and push Docker images
       uses: docker/build-push-action@v6.9.0
       with:
