--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -85,6 +85,7 @@ jobs:
         client-id: ${{secrets.AZURE_CLIENT_ID}}
         tenant-id: ${{secrets.AZURE_TENANT_ID}}
         subscription-id: ${{secrets.GH_PAT}}
+        auth-type: oidc
           
     - name: Build and push Docker images
       uses: docker/build-push-action@v6.9.0
