--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -83,7 +83,7 @@ jobs:
       with:
         client-id: ${{secrets.AZURE_CLIENT_ID}}
         tenant-id: ${{secrets.AZURE_TENANT_ID}}
-        subscription-id: ${{secrets.GH_PAT}}
+        subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
           
     - name: Build and push Docker images
       uses: docker/build-push-action@v6.9.0
