--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -70,6 +70,7 @@ jobs:
 
     env:
       APP_NAME: play-economy-microservices
+      ACR_NAME: playeconomyacr
   
     permissions:
       id-token: write
@@ -84,6 +85,9 @@ jobs:
         client-id: ${{secrets.AZURE_CLIENT_ID}}
         tenant-id: ${{secrets.AZURE_TENANT_ID}}
         subscription-id: ${{secrets.AZURE_SUBSCRIPTION_ID}}
+
+    - name: Login to container registry
+      run: az acr login --name ${{ env.ACR_NAME }}
           
     - name: Build and push Docker images
       uses: docker/build-push-action@v6.9.0
@@ -92,4 +96,5 @@ jobs:
         secrets: |
           "GH_OWNER=${{github.repository_owner}}"
           "GH_PAT=${{secrets.GH_PAT}}"
-        tags: ${{env.APP_NAME}}.azurecr.io/play.identity:${{ needs.generate-version.outputs.new_version }}
+        tags: ${{env.ACR_NAME}}.azurecr.io/play.identity:${{ needs.generate-version.outputs.new_version }}
+        push: true
