Updated to deploy to AKS

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -126,5 +126,5 @@ jobs:
         -f helm/values.yaml \
         -n ${{env.SERVICE_NAME}} \
         --set image.tag=${{ needs.generate-version.outputs.new_version }} \
-        --install
+        --install \
         --wait
