--- a/src/Play.Identity.Service/appsettings.json
+++ b/src/Play.Identity.Service/appsettings.json
@@ -16,6 +16,10 @@
   "RabbitMQSettings" : {
     "Host": "localhost"
   },
+  "SeqSettings": {
+    "Host": "localhost",
+    "Port": "5341"
+  },
   "IdentitySettings": {
     "AdminUserEmail": "admin@play.com",
     "StartingGil": 100
